Bug 267790 - Changing color scheme does not update gradients with system colors or `light-dark()`
Summary: Changing color scheme does not update gradients with system colors or `light-...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-01-19 14:58 PST by Tim Nguyen (:ntim)
Modified: 2024-04-02 15:15 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Nguyen (:ntim) 2024-01-19 14:58:34 PST
background-image: linear-gradient(light-dark(red, green), light-dark(red, green));


background-image: linear-gradient(CanvasText, CanvasText);


These gradients don't get recomputed when the color scheme is changed.
Comment 1 Radar WebKit Bug Importer 2024-01-19 14:58:42 PST
<rdar://problem/121285450>
Comment 2 Aditya Keerthi 2024-03-03 14:22:45 PST
Pull request: https://github.com/WebKit/WebKit/pull/25394
Comment 3 EWS 2024-03-04 12:34:15 PST
Committed 275645@main (5596316ca618): <https://commits.webkit.org/275645@main>

Reviewed commits have been landed. Closing PR #25394 and removing active labels.
Comment 4 Thomas Wisniewski [:twisniewski] 2024-04-01 09:01:17 PDT
I don't see the imported test on wpt.live or wpt.fyi. Could you submit it to the official WPTs, please and thanks?
Comment 5 Aditya Keerthi 2024-04-01 09:22:05 PDT
Yes, I need to rewrite the test to stop using `setTimeout` first though.